<resources>
    <string name="app_name">CampFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_join_us">Join Us</string>
    <string name="menu_policies_for_you">Policies for you</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_events_near_me">Events near me</string>
</resources>
