<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events_near_me"
            android:icon="@drawable/ic_events_near_me"
            android:title="@string/menu_events_near_me" />
        <item
            android:id="@+id/nav_policies_for_you"
            android:icon="@drawable/ic_policies_for_you"
            android:title="@string/menu_policies_for_you" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_posts"
            android:title="@string/menu_posts" />
        <item
            android:id="@+id/nav_join_us"
            android:icon="@drawable/ic_join_us"
            android:title="@string/menu_join_us" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login"/>
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />
    </group>

</menu>
