<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.campflow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_join_us"
        android:name="com.example.campflow.ui.JoinUs.JoinUsFragment"
        android:label="@string/menu_join_us"
        tools:layout="@layout/fragment_join_us" />

    <fragment
        android:id="@+id/nav_policies_for_you"
        android:name="com.example.campflow.ui.PoliciesForYou.PoliciesForYouFragment"
        android:label="@string/menu_policies_for_you"
        tools:layout="@layout/fragment_policies_for_you" />

    <fragment
        android:id="@+id/nav_posts"
        android:name="com.example.campflow.ui.Posts.PostsFragment"
        android:label="@string/menu_posts"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.campflow.ui.ContactUs.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_events_near_me"
        android:name="com.example.campflow.ui.EventsNearMe.EventsNearMeFragment"
        android:label="@string/menu_events_near_me"
        tools:layout="@layout/fragment_events_near_me" />
</navigation>